<resources>

    <string name="app_name">PNRStatusApp</string>
    <string name="title_section3">About</string>
    <string name="title_section2">PNR Status</string>
    <string name="title_section1">Messages</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_licence">License</string>
    <string name="title_activity_main">PNRStatusApp</string>
    <string name="message_delete_pnr">Delete this PNR number?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>

    <!-- No need to translate these -->
    <string name="fb_page_link">http://www.facebook.com/PNRStatusApp</string>
    <string name="empty_text"></string>
    <string name="line1">line1</string>
    <string name="line2">line2</string>
    <string name="line3">line3</string>
    <string name="line4">line4</string>
    <string name="pnr_number_length">10</string>

    <!-- From v2 -->
    <string name="version_name">Version 3.1.97 - Marvin (December 2013)</string>
    <string name="about_app_desc">Use this app to check the status of a valid train PNR Number in India.\n\n\r
No part of PNRStatus Data retrieved is persisted by this app.</string>
    <string name="designed_developer_info">Designed &amp; developed at ae labs</string>
    <string name="add_pnr_hint">Enter a PNR Number</string>
    <string name="add_pnr">Add</string>
    <string name="empty_set">Add a PNR Number to begin</string>
    <string name="empty_messages">No valid PNR messages found</string>
    <string name="pnr_check_button">Check</string>
    <string name="pnr_delete_button">Delete</string>
    <string name="pnr_info_button">Info</string>

    <!-- Titles and About Page -->
    <string name="ticket_info_title">Ticket Info</string>
    <string name="passenger_info_title">Passenger Info</string>
    <string name="fb_app_page">PNRStatusApp on Facebook</string>

    <!-- Localization Strings -->
    <string name="str_passengner_name">Passenger : %s</string>
    <string name="str_invalid_pnr_message">The entered PNR Number %s is invalid!</string>
    <string name="str_train_name_no">Train : %1$s ( %2$s )</string>
    <string name="str_journey_date">Journey Date : %s</string>
    <string name="str_current_status">Current Status : %s</string>
    <string name="str_booking_status">Booking Status : %s</string>
    <string name="str_berth_position">Berth Position : %s</string>
    <string name="str_journey_from_to">Journey : %1$s to %2$s</string>
    <string name="str_pnr_copied_to_clip">PNR Number copied to Clipboard</string>
    <string name="str_train_no">Train No : %s</string>
    <string name="str_ticket_class">Ticket Class : %s</string>
    <string name="str_share_status_subject">PNR Status for %s</string>
    <string name="str_share_status_detail">My PNR Status is %1$s, %2$s </string>
    <string name="str_share_via">Share Via</string>
    
    <string name="str_error_no_internet">Please check if internet is available</string>
    <string name="str_error_parse_error">Please check the PNR Number and try again</string>
    <string name="str_error_generic_error">A problem has occurred, please try again later</string>
    
    <string name="str_pref_messages">Messages</string>
    <string name="str_pref_hide_past_messages">Hide Past Messages</string>
    <string name="str_pref_hide_past_summary_on">Hide ticket details which are past travel date</string>
    <string name="str_pref_hide_past_summary_off">Show all ticket details from message inbox</string>
    <string name="str_pref_service">Service</string>
    <string name="str_pref_service_summary">Select the service to use for fetching the status</string>
    <string name="str_pref_select_service">Select Service</string>
    
    <string name="str_license_text">Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n
http://www.apache.org/licenses/LICENSE-2.0\n\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>

</resources>