<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="3dip"
    android:layout_marginTop="3dip" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <requestFocus />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/ProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="1dip"
        android:visibility="visible" />

    <LinearLayout android:id="@+id/listContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ProgressBar" >
        <ListView
            android:id="@android:id/list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cacheColorHint="#182128" />

        <TextView
            android:id="@android:id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dip"
            android:gravity="center_horizontal"
            android:text="@string/empty_set" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_below="@+id/listContainer"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/pnrTextInput"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="2dip"
            android:layout_weight="1"
            android:gravity="bottom"
            android:hint="@string/add_pnr_hint"
            android:imeOptions="actionNext|flagNoEnterAction"
            android:inputType="number"
            android:maxLength="10"
            android:textColor="#ffffff" >
        </EditText>

        <Button
            android:id="@+id/add_pnr_btn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/add_pnr" />
    </LinearLayout>

</RelativeLayout>