<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PnrRowView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dip"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="3dip" >

    <!-- PNR Number Text on the left, with status below it -->

    <TextView
        android:id="@+id/pnr_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:text=""
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pnr_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pnr_number"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:gravity="left"
        android:text="" />

    <TextView
        android:id="@+id/extra_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pnr_status"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:gravity="left"
        android:text="" />

    <!-- The buttons are aligned right -->

    <ImageButton
        android:id="@+id/check_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:layout_toLeftOf="@+id/delete_status"
        android:contentDescription="@string/pnr_check_button"
        android:src="@drawable/ic_refresh" />

    <ImageButton
        android:id="@+id/delete_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:layout_toLeftOf="@+id/more_info"
        android:contentDescription="@string/pnr_delete_button"
        android:src="@drawable/ic_discard" />

    <ImageButton
        android:id="@+id/more_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/pnr_info_button"
        android:hapticFeedbackEnabled="true"
        android:src="@drawable/info_button_drawable" />

</RelativeLayout>