<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/TicketInfoLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="0dp"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/TicketInfoHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp" >

            <TextView
                android:id="@+id/ticket_info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ticket_info_title"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/ticket_pnrnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ticket_info_title"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:text="@string/empty_text"
                android:textStyle="bold" >
            </TextView>

            <Button
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/share_button_drawable"
                android:hapticFeedbackEnabled="true" >
            </Button>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/TicketInfoDetailLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ticket_info_line1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp" >
            </TextView>

            <TextView
                android:id="@+id/ticket_info_line2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp" >
            </TextView>

            <TextView
                android:id="@+id/ticket_info_line3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp" >
            </TextView>

            <TextView
                android:id="@+id/ticket_info_line4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TicketInfoLayout"
        android:background="#255D89"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:paddingBottom="2dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/passenger_info_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/passenger_info_title"
            android:textStyle="bold" >
        </TextView>

        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="#255D89"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:listSelector="#255D89" />

        <TextView
            android:id="@android:id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="5dip"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/empty_text" />
    </LinearLayout>

</RelativeLayout>